# AIML-RPS

./: .gitignore  FeedBackWorkflow.md  Problem Statement.txt  README.md  api_test_scenarios.json  demo.ipynb  main.py  pyproject.toml  v1.ipynb  v2.ipynb
Data/: feedback.csv  menu_ingredients.csv  staff_roles.csv
V1Data/: external_features.csv  historical_sales.csv  ingredient_master.csv
V2Data/: external_features.csv  historical_menu_sales.csv  historical_sales.csv  ingredient_master.csv  menu_ingredients.csv  menu_items_master.csv  staff_roles.csv
src/: api.py  api_models.py  config.py  data_generator.py  feedback_loop.py  forecaster.py  ingredient_planner.py  service.py  staff_planner.py  utils.py
